--- a/day1/Python101.ipynb
+++ b/day1/Python101.ipynb
@@ -134,7 +134,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Syntax:\n",
+        "Syntax\n",
         "\n",
         "---\n",
         "\n",
@@ -147,7 +147,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Examples:\n",
+        "Examples\n",
         "\n",
         "---"
       ],
@@ -205,7 +205,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Syntax:\n",
+        "Syntax\n",
         "\n",
         "---\n",
         "            # Lorem ipsum dolor sit amet ...\n",
@@ -221,7 +221,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Examples:\n",
+        "Examples\n",
         "\n",
         "---"
       ],
@@ -344,7 +344,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Syntax:\n",
+        "Syntax\n",
         "\n",
         "---\n",
         "        myVariableName = value"
@@ -356,7 +356,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        " Examples:\n",
+        " Examples\n",
         "\n",
         "---"
       ],
@@ -458,7 +458,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Examples:\n",
+        "Examples\n",
         "\n",
         "---"
       ],
@@ -526,7 +526,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Examples:\n",
+        "Examples\n",
         "\n",
         "---"
       ],
@@ -630,7 +630,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Examples:\n",
+        "Examples\n",
         "\n",
         "---"
       ],
@@ -721,7 +721,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Syntax:\n",
+        "Syntax\n",
         "\n",
         "---\n",
         "        type(myVariableName)"
@@ -733,7 +733,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Examples:\n",
+        "Examples\n",
         "\n",
         "---"
       ],
@@ -848,7 +848,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Examples:\n",
+        "Examples\n",
         "\n",
         "---"
       ],
@@ -937,7 +937,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Syntax:\n",
+        "Syntax\n",
         "\n",
         "---\n",
         "        myVariableName = numeric datatype"
@@ -949,7 +949,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Examples:\n",
+        "Examples\n",
         "\n",
         "---"
       ],
@@ -1000,7 +1000,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Examples:\n",
+        "Examples\n",
         "\n",
         "---"
       ],
@@ -1111,7 +1111,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Syntax:\n",
+        "Syntax\n",
         "\n",
         "---\n",
         "        myVariableName = function(VariableName)"
@@ -1123,7 +1123,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Examples:\n",
+        "Examples\n",
         "\n",
         "---"
       ],
@@ -1226,7 +1226,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Examples:\n",
+        "Examples\n",
         "\n",
         "---"
       ],
@@ -1316,7 +1316,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Examples:\n",
+        "Examples\n",
         "\n",
         "---"
       ],
@@ -1494,7 +1494,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Examples:\n",
+        "Examples\n",
         "\n",
         "---"
       ],
@@ -1567,7 +1567,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Examples:\n",
+        "Examples\n",
         "\n",
         "---"
       ],
@@ -1628,7 +1628,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Examples:\n",
+        "Examples\n",
         "\n",
         "---"
       ],
@@ -1749,7 +1749,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Examples:\n",
+        "Examples\n",
         "\n",
         "---"
       ],
@@ -1901,16 +1901,6 @@
       "cell_type": "markdown",
       "source": [
         "2.1 Arithmetic operators\n",
-        "---\n",
-        "\n",
-        "* Addition:\tx + y\n",
-        "* Subtraction:\tx - y\n",
-        "*\tMultiplication:\tx * y\n",
-        "* Exponentiation:\tx ** y\n",
-        "* Division:\tx / y\n",
-        "* Modulus:\tx % y\t         (returns the remainder of a division)\n",
-        "* Floor division:\tx // y   (rounds the result down to the nearest whole number)\n",
-        "\n",
         "---"
       ],
       "metadata": {
@@ -1920,7 +1910,37 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Examples:\n",
+        "Description\n",
+        "\n",
+        "---\n",
+        "Arithmetic operators in Python are used to perform basic mathematical operations. The primary operators include addition (+), subtraction (-), multiplication ( * ), exponentiation ( ** ), division (/), modulus (%), and floor division (//). Please keep in mind that division operator (/) always returns a float. Modulus operator (%) returns the remainder of a division. Floor division (//) returns the largest integer less than or equal to the result. These operators work with integers, floats, and even with complex numbers."
+      ],
+      "metadata": {
+        "id": "wvUD0fWYXD3o"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "* Addition:\t                result = x + y\n",
+        "* Subtraction:\t            result = x - y\n",
+        "*\tMultiplication:\t          result = x * y\n",
+        "* Exponentiation:\t          result = x ** y\n",
+        "* Division:\t                result = x / y\n",
+        "* Modulus:\t                result = x % y\n",
+        "* Floor division:\t          result = x // y   "
+      ],
+      "metadata": {
+        "id": "LaQdK7YUWQgj"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
         "\n",
         "---"
       ],
@@ -2115,24 +2135,7 @@
       "cell_type": "markdown",
       "source": [
         "Assignment operators\n",
-        "---\n",
-        "Assignment operators are used to assign values to variables. Python language also supports compound assignment operators that combine assignment with arithmetic or bitwise operations.\n",
-        "\n",
-        "Assignment: =, +=, -=, * =, /=, //=, %=, **=, :=\n",
-        "\n",
-        "---\n",
-        "Syntax:\n",
-        "\n",
-        "     myVar =  value\n",
-        "\n",
-        "     myVar += value         \n",
-        "\n",
-        "     myVar *= value\n",
-        "\n",
-        "     .\n",
-        "     .\n",
-        "     .\n",
-        "     myVar %= value\n"
+        "---"
       ],
       "metadata": {
         "id": "QvjMM-n7jVuT"
@@ -2141,7 +2144,45 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Examples:\n",
+        "Description\n",
+        "\n",
+        "---\n",
+        "Assignment operators are used to assign values to variables. Mathematical operations can be performed while assining. The basic assignment operator is  (=), which assignes the value on the right to the variable on the left. Python language also supports compound assignment operators that combine assignment with arithmetic or bitwise operations. These shorthand assignemnt operators include add and assign (+=) operator, subtruct and assign (-=) operator, multiply and assign ( *=) operator, divide and assign (/=) operator, floor divide and assign (//=) operator, modulus and assign (%=) operator, exponentiate and assign ( * *=) operator, and assignment expression (:=)operator."
+      ],
+      "metadata": {
+        "id": "plClOw_qXRGd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "     myVariable =  value\n",
+        "\n",
+        "     myVariable += value    # myVariable = myVariable +=  value         \n",
+        "\n",
+        "     myVariable -= value    # myVariable = myVariable -=  value\n",
+        "\n",
+        "     myVariable *= value    # myVariable = myVariable *=  value\n",
+        "\n",
+        "     myVariable /= value    # myVariable = myVariable /=  value\n",
+        "\n",
+        "     myVariable //= value   # myVariable = myVariable //= value\n",
+        "\n",
+        "     myVariable %= value    # myVariable = myVariable %=  value\n",
+        "\n",
+        "     myVariable * *= value  # myVariable = myVariable **= value\n"
+      ],
+      "metadata": {
+        "id": "n8PRD3ABXY4d"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
         "\n",
         "---"
       ],
@@ -2274,16 +2315,62 @@
         "Note\n",
         "\n",
         "---\n",
-        "Assignment syntax operator ( := ) reminds a walrus with tusks - the Walrus operator. It is very useful for *if*, *while* conditional statements, *list comprehensions*, for *filtering* and *mapping* will be discussed below. You can assign a value to a variable and use that value within an expression. The  Walrus operator was introduced in Python 3.8. Please, see Section 4, Control flow.\n",
-        "\n",
-        "---\n",
-        "   Syntax:\n",
-        "\n",
-        "        myVariable := expression"
+        "Assignment syntax operator ( := ) reminds a walrus with tusks - the Walrus operator. It is very useful for *if*, *while* conditional statements, *list comprehensions*, for *filtering* and *mapping* will be discussed below. You can assign a value to a variable and use that value within an expression. The walrus operator (:=) was introduced in Python 3.8 and allows assignemnt and return of a value in a single expression. Please, see Section 4, Control flow."
       ],
       "metadata": {
         "id": "9QOD8wzZa332"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "        myVariable := expression"
+      ],
+      "metadata": {
+        "id": "uqt-HpjGagcr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "yY55nxmYay-P"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Usual way\n",
+        "\n",
+        "myVariable = input(\"Enter your name: \")\n",
+        "print(f\"Hello, {myVariable}\")"
+      ],
+      "metadata": {
+        "id": "Zn5ZYRnFa2Al"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Using Walrus operator\n",
+        "\n",
+        "if (myVariable := input(\"Enter your name: \")) != \"\":\n",
+        "  print(f\"Hello, {myVariable}\")"
+      ],
+      "metadata": {
+        "id": "SmskSQZ4bKkT"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
