--- a/day1/Python101.ipynb
+++ b/day1/Python101.ipynb
@@ -56,6 +56,76 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Disclamer\n",
+        "\n",
+        "---\n",
+        "The information, examples, or code provided are for educational and informational purposes only. I make no representations or warranties of any kind, express or implied, about the completeness, accuracy, relability, or suitability of the content. Any reliance you place on such information is strictly at your own risk. I am not liable for any loss or damage, direct or indirect, arising from the use or misuse of this content."
+      ],
+      "metadata": {
+        "id": "BcNwHLg6fOd6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The content of this file is organized and presented to the reader in several sections to help understand and learn Python programming language more effectivwly. Each section is devided into Description, Note, Syntax, and Examples. This structure is designed to make the material clear, practical, and easy to follow.\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "_DjwcfdWhEG8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "The Description section explains a particular concept that is used in Python for operator, function, module, class etc. Its gives an overview of its pupose, the behavior, and when it can typically be used. This section helps students to better understand and get familiar with the concept."
+      ],
+      "metadata": {
+        "id": "HR5RGUBsdF94"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Note\n",
+        "\n",
+        "---\n",
+        "The Note section is used to share additional information that may be helpful but is not essential to the main topic. This can include related concepts with more context, tips, warnings, or reminders. The Note section may also mention useful ideas that could support your overall understanding or learning process. It can be helpful extra insight or advice to deepen the understanding."
+      ],
+      "metadata": {
+        "id": "Zk3XOCkqgFHN"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "The syntax section shows the correct way of writing the concept in Python. It focuses on the structure and format, such as the order of elements, used symbols, and required components. This section is essential for learning how to apply the concept while programming."
+      ],
+      "metadata": {
+        "id": "aUNfYRNKd-tv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---\n",
+        "the Examples section provides practical code snippets that demonstrate how the concept is used in real scenarious. This section helps to reinforce understanding by showing the concept in action."
+      ],
+      "metadata": {
+        "id": "-0BWignIekHd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Outline\n",
         "\n",
         "Section 1: **Python programming basics**\n",
@@ -621,7 +691,7 @@
         "Syntax\n",
         "\n",
         "---\n",
-        "       del my_variable_name"
+        "       del myVariable"
       ],
       "metadata": {
         "id": "MOiX2aEGGDYS"
@@ -724,7 +794,7 @@
         "Syntax\n",
         "\n",
         "---\n",
-        "        type(myVariableName)"
+        "        type(myVariable)"
       ],
       "metadata": {
         "id": "00iSRq4O9aSz"
@@ -940,7 +1010,7 @@
         "Syntax\n",
         "\n",
         "---\n",
-        "        myVariableName = numeric datatype"
+        "        myVariable = numeric datatype"
       ],
       "metadata": {
         "id": "jutNzWei-Ai4"
@@ -1114,7 +1184,7 @@
         "Syntax\n",
         "\n",
         "---\n",
-        "        myVariableName = function(VariableName)"
+        "        myVariable = function(VariableName)"
       ],
       "metadata": {
         "id": "ZexMWVWl_1e5"
