--- a/day1/Python101.ipynb
+++ b/day1/Python101.ipynb
@@ -68,7 +68,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The content of this file is organized and presented to the reader in several sections to help understand and learn Python programming language more effectivwly. Each section is devided into Description, Note, Syntax, and Examples. This structure is designed to make the material clear, practical, and easy to follow.\n",
+        "The content of this file is organized and presented to the reader in several sections to help understand and learn Python programming language more effectively. Each section is devided into Description, Note, Syntax, and Examples. This structure is designed to make the material clear, practical, and easy to follow.\n",
         "---"
       ],
       "metadata": {
@@ -105,7 +105,7 @@
         "Syntax\n",
         "\n",
         "---\n",
-        "The syntax section shows the correct way of writing the concept in Python. It focuses on the structure and format, such as the order of elements, used symbols, and required components. This section is essential for learning how to apply the concept while programming."
+        "The Syntax section shows the correct way of writing the concept in Python. It focuses on the structure and format, such as the order of elements, used symbols, and required components. This section is essential for learning how to apply the concept while programming."
       ],
       "metadata": {
         "id": "aUNfYRNKd-tv"
@@ -117,7 +117,7 @@
         "Examples\n",
         "\n",
         "---\n",
-        "the Examples section provides practical code snippets that demonstrate how the concept is used in real scenarious. This section helps to reinforce understanding by showing the concept in action."
+        "The Examples section provides practical code snippets that demonstrate how the concept is used in real scenarious. This section helps to reinforce understanding by showing the concept in action."
       ],
       "metadata": {
         "id": "-0BWignIekHd"
