--- a/day1/Python101.ipynb
+++ b/day1/Python101.ipynb
@@ -2446,19 +2446,39 @@
       "cell_type": "markdown",
       "source": [
         "2.2 Comparison operators\n",
-        "---\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "MCHjIC-foBxE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
         "\n",
+        "---\n",
+        "Comparison operators are used to compare two values and return a Boolean result: either True or False. The operators include equal to (==), not equal to (!=), greater than (>), less than (<), greater or equal to (>=), less than or equal to (<=). They are commonly used in conditional statements such as if, while, and logical expressions to control the data flow of a program. Comparison operators work with numbers, strings, and other data types, they help evaluate relationships between values or expressions."
+      ],
+      "metadata": {
+        "id": "NF-nvSQCkn-s"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
         "* Equal:\tx == y\n",
         "* Not equal:\tx != y\n",
         "* Greater than:\tx > y\n",
         "* Less than:\tx < y\n",
         "* Greater than or equal to:\tx >= y\n",
-        "* Less than or equal to:\tx <= y\n",
-        "\n",
-        "---"
+        "* Less than or equal to:\tx <= y"
       ],
       "metadata": {
-        "id": "MCHjIC-foBxE"
+        "id": "PcI5i1z4kjVE"
       }
     },
     {
@@ -2622,13 +2642,6 @@
       "cell_type": "markdown",
       "source": [
         "2.3 Logical operators\n",
-        "---\n",
-        "Logical operators are used to perform Boolean algebra and combine multiple conditional expressions. These operators return True or False based on the logical relationship between the expressions they are evaluating.\n",
-        "\n",
-        "* and\n",
-        "* or\n",
-        "* not\n",
-        "\n",
         "---"
       ],
       "metadata": {
@@ -2638,7 +2651,47 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Examples:\n",
+        "Description\n",
+        "\n",
+        "---\n",
+        "Logical operators are used to perform Boolean algebra and combine multiple conditional expressions. These operators return a Boolen result, True or False, based on the logical relationship between the expressions they are evaluating. The three main logical operators are and (&), or (|), and not (!). The and operator returns True only if both conditions are True. The or operator returns True if atleast one condition is True. The not operator inverts the result of a condition that returns True if the condition is False. These operators are often used in conditional statements to build more complex decision making logic."
+      ],
+      "metadata": {
+        "id": "t3I59w40l0c2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Note\n",
+        "\n",
+        "---\n",
+        "The or operator uses the so called short-circuit evaluation. If the first condition is True, Python does not evaluate the second condition. It immediately returns True because it meets the requirement it needs for an or expression."
+      ],
+      "metadata": {
+        "id": "ugxxVi-OnXVj"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "condition1 and condition2\n",
+        "\n",
+        "condition1 or condition2\n",
+        "\n",
+        "not condition\n"
+      ],
+      "metadata": {
+        "id": "VH53tSaRm5ug"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
         "\n",
         "---"
       ],
@@ -3072,8 +3125,31 @@
       "cell_type": "markdown",
       "source": [
         "2.7 Operator precedence\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "vGU9c0IXy3wn"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
         "---\n",
         "\n",
+        "Operator precedence determines the order in which operators are evaluated in complex expressions. Operators with higher precedence are evaluated first  before those with lower precedence, unless parenthesis are used. Exponentiation, unary, Arithmetic operators have higher precedence than logical and comparison operators. Understanding operator precedence is important to avoid unexpected results and to write clear, predictable expressions."
+      ],
+      "metadata": {
+        "id": "JbwDN2eAoLXl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
         "* Parentheses: ()\n",
         "* Exponentiation: **\n",
         "* Unary: +x,  -x,  ~x\n",
@@ -3082,12 +3158,10 @@
         "* Comparison: ==,  !=,  >,  >=,  <,  <=  \n",
         "* Identity: is,  is not  \n",
         "* Membership: in, in not\n",
-        "* Logical: not, and, or\n",
-        "\n",
-        "---"
+        "* Logical: not, and, or"
       ],
       "metadata": {
-        "id": "vGU9c0IXy3wn"
+        "id": "_SJY1AoxoHij"
       }
     },
     {
