--- a/day1/Python101.ipynb
+++ b/day1/Python101.ipynb
@@ -1995,13 +1995,13 @@
         "Syntax\n",
         "\n",
         "---\n",
-        "* Addition:\t                result = x + y\n",
-        "* Subtraction:\t            result = x - y\n",
-        "*\tMultiplication:\t          result = x * y\n",
-        "* Exponentiation:\t          result = x ** y\n",
-        "* Division:\t                result = x / y\n",
-        "* Modulus:\t                result = x % y\n",
-        "* Floor division:\t          result = x // y   "
+        "* Addition:\t                x   +   y\n",
+        "* Subtraction:\t            x   -   y\n",
+        "*\tMultiplication:\t          x   *   y\n",
+        "* Exponentiation:\t          x   **  y\n",
+        "* Division:\t                x   /   y\n",
+        "* Modulus:\t                x   %   y\n",
+        "* Floor division:\t          x   //  y   "
       ],
       "metadata": {
         "id": "LaQdK7YUWQgj"
@@ -2229,21 +2229,14 @@
         "Syntax\n",
         "\n",
         "---\n",
-        "     myVariable =  value\n",
-        "\n",
-        "     myVariable += value    # myVariable = myVariable +=  value         \n",
-        "\n",
-        "     myVariable -= value    # myVariable = myVariable -=  value\n",
-        "\n",
-        "     myVariable *= value    # myVariable = myVariable *=  value\n",
-        "\n",
-        "     myVariable /= value    # myVariable = myVariable /=  value\n",
-        "\n",
-        "     myVariable //= value   # myVariable = myVariable //= value\n",
-        "\n",
-        "     myVariable %= value    # myVariable = myVariable %=  value\n",
-        "\n",
-        "     myVariable * *= value  # myVariable = myVariable **= value\n"
+        "* Assignment:\t                x   =  y\n",
+        "* Add and assign:\t            x  +=  y\n",
+        "*\tSubtract and assign:\t      x  -=  y\n",
+        "* Multiply and assign:\t      x  *=  y\n",
+        "* Divide and assign:\t        x  /=  y\n",
+        "* Floor divide and assign:\t  x //=  y\n",
+        "* Modulus and assign:\t        x  %=  y   \n",
+        "* Exponentiate and assign:    x **=  y"
       ],
       "metadata": {
         "id": "n8PRD3ABXY4d"
