Saved updates to IntermediatePython.ipynb for 2025 training

--- a/day2/IntermediatePython.ipynb
+++ b/day2/IntermediatePython.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/lsuhpchelp/loniscworkshop2024/blob/main/day2/IntermediatePython.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/lsuhpchelp/loniscworkshop2025/blob/main/day2/IntermediatePython.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -17,13 +17,13 @@
       },
       "source": [
         "# **Day 2: Intermediate Python**\n",
-        "### 2024 LONI Scientific Computing Bootcamp\n",
+        "### 2025 LONI Scientific Computing Bootcamp\n",
         "\n",
         "Dr. Jianxiong \"Jason\" Li\n",
         "\n",
         "jasonli3@lsu.edu\n",
         "\n",
-        "Jun 5, 2024"
+        "Jun 3, 2025"
       ]
     },
     {
@@ -712,7 +712,7 @@
         "# Load an external data file (local or from remote server): np.loadtxt()\n",
         "# https://numpy.org/doc/stable/reference/generated/numpy.loadtxt.html\n",
         "\n",
-        "txtfile = 'https://github.com/lsuhpchelp/loniscworkshop2024/raw/main/day2/data.txt'\n",
+        "txtfile = 'https://github.com/lsuhpchelp/loniscworkshop2025/raw/main/day2/data.txt'\n",
         "myAry = np.loadtxt(txtfile,\n",
         "                    skiprows=16,\n",
         "                    usecols={0,1,2},\n",
@@ -893,7 +893,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "![2_5_reference](https://github.com/lsuhpchelp/loniscworkshop2024/raw/main/day2/images/2_5_reference.png)"
+        "![2_5_reference](https://github.com/lsuhpchelp/loniscworkshop2025/raw/main/day2/images/2_5_reference.png)"
       ],
       "metadata": {
         "id": "dFx7Qv3CWdKs"
@@ -1061,9 +1061,9 @@
       "cell_type": "markdown",
       "source": [
         "*   Neural network training (picture <-> vector)\n",
-        "> ![nn](https://github.com/lsuhpchelp/loniscworkshop2024/raw/main/day2/images/3_nn.png)\n",
+        "> ![nn](https://github.com/lsuhpchelp/loniscworkshop2025/raw/main/day2/images/3_nn.png)\n",
         "*   Wave function propagation (multi-dimensional array <-> vector)\n",
-        "> ![wavefunction](https://github.com/lsuhpchelp/loniscworkshop2024/raw/main/day2/images/3_wavefunction.gif)\n",
+        "> ![wavefunction](https://github.com/lsuhpchelp/loniscworkshop2025/raw/main/day2/images/3_wavefunction.gif)\n",
         "[Li and Thumm, Phys. Rev. A **101**, 013411](https://doi.org/10.1103/PhysRevA.101.013411)\n",
         "*   ..."
       ],
@@ -1083,7 +1083,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "![axis](https://github.com/lsuhpchelp/loniscworkshop2024/raw/main/day2/images/3_1_axis.png)"
+        "![axis](https://github.com/lsuhpchelp/loniscworkshop2025/raw/main/day2/images/3_1_axis.png)"
       ],
       "metadata": {
         "id": "3oe5LhPw2YB5"
@@ -1309,7 +1309,7 @@
       "source": [
         "## **! *Message of the Day* !**\n",
         "\n",
-        "**Avoid loops, as you would avoid fire!!!**\n",
+        "#### **Avoid loops, as you would avoid fire!!!**\n",
         "\n",
         "( Even if you forget everything, remember this! )"
       ],
@@ -1363,7 +1363,8 @@
         "print(\"np.srqt(x) = \", np.sqrt(x))"
       ],
       "metadata": {
-        "id": "wfefhpKNbuZN"
+        "id": "wfefhpKNbuZN",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -1533,7 +1534,7 @@
       "source": [
         "### ***) A Practice with a Practical Problem (Part 1)**\n",
         "\n",
-        "![4_1_problem_pt1](https://github.com/lsuhpchelp/loniscworkshop2024/raw/main/day2/images/4_1_problem_pt1.png)\n",
+        "![4_1_problem_pt1](https://github.com/lsuhpchelp/loniscworkshop2025/raw/main/day2/images/4_1_problem_pt1.png)\n",
         "\n",
         "**!!CAUTION!!**\n",
         "\n",
@@ -1697,7 +1698,7 @@
         "\n",
         "How does broadcasting work in general? Use the above example:\n",
         "\n",
-        "![4_2_broadcasting_def1](https://github.com/lsuhpchelp/loniscworkshop2024/raw/main/day2/images/4_2_broadcasting_def1.png)"
+        "![4_2_broadcasting_def1](https://github.com/lsuhpchelp/loniscworkshop2025/raw/main/day2/images/4_2_broadcasting_def1.png)"
       ],
       "metadata": {
         "id": "POgeEiE3om6P"
@@ -1706,9 +1707,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "![4_2_broadcasting_def2](https://github.com/lsuhpchelp/loniscworkshop2024/raw/main/day2/images/4_2_broadcasting_def2.png)\n",
+        "![4_2_broadcasting_def2](https://github.com/lsuhpchelp/loniscworkshop2025/raw/main/day2/images/4_2_broadcasting_def2.png)\n",
         "\n",
-        "![4_2_broadcasting_def3](https://github.com/lsuhpchelp/loniscworkshop2024/raw/main/day2/images/4_2_broadcasting_def3.png)"
+        "![4_2_broadcasting_def3](https://github.com/lsuhpchelp/loniscworkshop2025/raw/main/day2/images/4_2_broadcasting_def3.png)"
       ],
       "metadata": {
         "id": "a0eer91YTp-I"
@@ -1726,7 +1727,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### ![4_2_broadcasting_eg1](https://github.com/lsuhpchelp/loniscworkshop2024/raw/main/day2/images/4_2_broadcasting_eg1.png)"
+        "#### ![4_2_broadcasting_eg1](https://github.com/lsuhpchelp/loniscworkshop2025/raw/main/day2/images/4_2_broadcasting_eg1.png)"
       ],
       "metadata": {
         "id": "ewwMD690zy-Z"
@@ -1766,7 +1767,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### ![4_2_broadcasting_eg2](https://github.com/lsuhpchelp/loniscworkshop2024/raw/main/day2/images/4_2_broadcasting_eg2.png)"
+        "#### ![4_2_broadcasting_eg2](https://github.com/lsuhpchelp/loniscworkshop2025/raw/main/day2/images/4_2_broadcasting_eg2.png)"
       ],
       "metadata": {
         "id": "uwts-bcQXRg6"
@@ -1775,11 +1776,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "![4_2_broadcasting_eg2_sol1](https://github.com/lsuhpchelp/loniscworkshop2024/raw/main/day2/images/4_2_broadcasting_eg2_sol1.png)\n",
+        "![4_2_broadcasting_eg2_sol1](https://github.com/lsuhpchelp/loniscworkshop2025/raw/main/day2/images/4_2_broadcasting_eg2_sol1.png)\n",
         "\n",
-        "![4_2_broadcasting_eg2_sol2](https://github.com/lsuhpchelp/loniscworkshop2024/raw/main/day2/images/4_2_broadcasting_eg2_sol2.png)\n",
+        "![4_2_broadcasting_eg2_sol2](https://github.com/lsuhpchelp/loniscworkshop2025/raw/main/day2/images/4_2_broadcasting_eg2_sol2.png)\n",
         "\n",
-        "![4_2_broadcasting_eg2_sol3](https://github.com/lsuhpchelp/loniscworkshop2024/raw/main/day2/images/4_2_broadcasting_eg2_sol3.png)"
+        "![4_2_broadcasting_eg2_sol3](https://github.com/lsuhpchelp/loniscworkshop2025/raw/main/day2/images/4_2_broadcasting_eg2_sol3.png)"
       ],
       "metadata": {
         "id": "zxM1KKT1YuFi"
@@ -1806,7 +1807,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### ![4_2_broadcasting_eg3](https://github.com/lsuhpchelp/loniscworkshop2024/raw/main/day2/images/4_2_broadcasting_eg3.png)"
+        "#### ![4_2_broadcasting_eg3](https://github.com/lsuhpchelp/loniscworkshop2025/raw/main/day2/images/4_2_broadcasting_eg3.png)"
       ],
       "metadata": {
         "id": "KssPB6uldlmb"
@@ -1846,7 +1847,7 @@
       "source": [
         "### ***) A Practice with a Practical Problem (Part 2)**\n",
         "\n",
-        "![4_2_problem_pt2](https://github.com/lsuhpchelp/loniscworkshop2024/raw/main/day2/images/4_2_problem_pt2.png)\n",
+        "![4_2_problem_pt2](https://github.com/lsuhpchelp/loniscworkshop2025/raw/main/day2/images/4_2_problem_pt2.png)\n",
         "\n",
         "**!!CAUTION!!**\n",
         "\n",
@@ -1886,11 +1887,11 @@
       "source": [
         "Instead, remember how broadcasting works:\n",
         "\n",
-        "![4_2_problem_pt2_sol1](https://github.com/lsuhpchelp/loniscworkshop2024/raw/main/day2/images/4_2_problem_pt2_sol1.png)\n",
+        "![4_2_problem_pt2_sol1](https://github.com/lsuhpchelp/loniscworkshop2025/raw/main/day2/images/4_2_problem_pt2_sol1.png)\n",
         "\n",
-        "![4_2_problem_pt2_sol2](https://github.com/lsuhpchelp/loniscworkshop2024/raw/main/day2/images/4_2_problem_pt2_sol2.png)\n",
+        "![4_2_problem_pt2_sol2](https://github.com/lsuhpchelp/loniscworkshop2025/raw/main/day2/images/4_2_problem_pt2_sol2.png)\n",
         "\n",
-        "![4_2_problem_pt2_sol3](https://github.com/lsuhpchelp/loniscworkshop2024/raw/main/day2/images/4_2_problem_pt2_sol3.png)"
+        "![4_2_problem_pt2_sol3](https://github.com/lsuhpchelp/loniscworkshop2025/raw/main/day2/images/4_2_problem_pt2_sol3.png)"
       ],
       "metadata": {
         "id": "H3eCKX41jW7u"
@@ -2132,9 +2133,9 @@
       "source": [
         "### ***) A Practice with a Practical Problem (Part 3)**\n",
         "\n",
-        "![4_3_problem_pt3](https://github.com/lsuhpchelp/loniscworkshop2024/raw/main/day2/images/4_3_problem_pt3.png)\n",
+        "![4_3_problem_pt3](https://github.com/lsuhpchelp/loniscworkshop2025/raw/main/day2/images/4_3_problem_pt3.png)\n",
         "\n",
-        "![4_3_problem_pt3_3rdBohr](https://github.com/lsuhpchelp/loniscworkshop2024/raw/main/day2/images/4_3_problem_pt3_3rdBohr.png)\n",
+        "![4_3_problem_pt3_3rdBohr](https://github.com/lsuhpchelp/loniscworkshop2025/raw/main/day2/images/4_3_problem_pt3_3rdBohr.png)\n",
         "\n",
         "\n",
         "**!!CAUTION!!**\n",
@@ -2564,9 +2565,9 @@
       "source": [
         "### ***) A Practice with a Practical Problem (Part 4)**\n",
         "\n",
-        "![4_4_problem_pt4](https://github.com/lsuhpchelp/loniscworkshop2024/raw/main/day2/images/4_4_problem_pt4.png)\n",
+        "![4_4_problem_pt4](https://github.com/lsuhpchelp/loniscworkshop2025/raw/main/day2/images/4_4_problem_pt4.png)\n",
         "\n",
-        "![4_4_problem_pt4_FWHM](https://github.com/lsuhpchelp/loniscworkshop2024/raw/main/day2/images/4_4_problem_pt4_FWHM.png)\n",
+        "![4_4_problem_pt4_FWHM](https://github.com/lsuhpchelp/loniscworkshop2025/raw/main/day2/images/4_4_problem_pt4_FWHM.png)\n",
         "\n",
         "**!!CAUTION!!**\n",
         "\n",
@@ -2700,7 +2701,7 @@
       "source": [
         "Calculate the derivatie of function `y=sin(x)` on a numerical grid.\n",
         "\n",
-        "![5_1_derivativ](https://github.com/lsuhpchelp/loniscworkshop2024/raw/main/day2/images/5_1_derivative.png)"
+        "![5_1_derivativ](https://github.com/lsuhpchelp/loniscworkshop2025/raw/main/day2/images/5_1_derivative.png)"
       ],
       "metadata": {
         "id": "HtlE43ZGlL-o"
@@ -2781,7 +2782,7 @@
         "import matplotlib.pyplot as plt\n",
         "\n",
         "# Read an image\n",
-        "img = iio.imread('https://github.com/lsuhpchelp/loniscworkshop2024/raw/main/day2/images/5_2_racoon.png')\n",
+        "img = iio.imread('https://github.com/lsuhpchelp/loniscworkshop2025/raw/main/day2/images/5_2_racoon.png')\n",
         "\n",
         "# Plot the image\n",
         "plt.imshow(img)\n",
